--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div id="colorPane" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <ul id="colorList" class="nav nav-sidebar">
+                            <ul id="colorList" class="nav nav-sidebar list-group panel-heading">
 
                             </ul>                   
                         </div>
