--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="row">
             <div id="vis-controls" class="component col-sm-3 col-md-2 sidebar">
                 <h4>Control Panel</h4>
-                 <div class="panel fixed-list">
-                       <!--Search--> 
+                 <div class="panel">
+                       <input id="search" type="text" class="form-control" placeholder="Search your hero or villain..."> 
                 </div>
                 <div class="panel">
                     <button id="modechange" type="button" class="btn btn-primary">Connections Mode</button>
