integrated with comics end point

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                 </div>
                 <img id="detail-image" alt="character image" />
                 <div id="bio"></div>
-                <p id="detail-read-more"><a href="">Read more on Wikia</a></p>
+                <p id="detail-read-more"><a href="" target="_blank">Read more on Wikia</a></p>
             </div>
             <table id="detail-table">
                 <tr><th>Affiliation(s)</th><td id="detail-affil"></td></tr>
-                <tr><th># Appearances</th><td id="detail-appear"></td></tr>
+                <tr><th># Appears</th><td id="detail-appear"></td></tr>
                 <!--<tr><th>Consommation</th><td id="detail-consomm"></td></tr>-->
                 <tr><th>Gender</th><td id="detail-gender"></td></tr>
                 <tr><th>Nationality</th><td id="detail-nat"></td></tr>
@@ -165,7 +165,7 @@
             </div>
             <div id="comic-info">
                 <h3 id="comic-title"></h3>
-                <p>By <span id="comic-author"></span></p>
+                <!--<p>By <span id="comic-author"></span></p>-->
                 <p><a href="" class="btn btn-default" id="comics-more">More Comics!</a></p>
             </div>        
         </div>
