Minor Color edits
- removed color swatch
- changed color palette

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#colorPane">
                         Color Code</a>
-                        <span class="label label-default" style="background:#a6cee3;">&nbsp;&nbsp;&nbsp;</span>
+                        <!--<span class="label label-default" style="background:#a6cee3;">&nbsp;&nbsp;&nbsp;</span>-->
                       </h4>
                             <div id="colorPin">
                             </div>
