--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                     </div>
                     <div id="filterPane" class="panel-collapse collapse">
                       <div class="panel-body">
-                            <ul id="filterList" class="nav nav-sidebar" >
+                      <div class="btn-group" role="group">
+                      	<button id="getMin" class="btn btn-default">Min Apppears</button>
+                        <button id="getMax" class="btn btn-default">Max Appears</button> 
+                        </div>
+                            <ul id="filterList" class="nav nav-sidebar" style="display:none;" >
 
                             </ul>
                         </div>
