Revert "max/min getdata"
This reverts commit d99a1cdab8d589dee8a4986beddea3c5d2327956.

--- a/index.html
+++ b/index.html
@@ -90,11 +90,7 @@
                     </div>
                     <div id="filterPane" class="panel-collapse collapse">
                       <div class="panel-body">
-                      <div class="btn-group" role="group">
-                      	<button id="getMin" class="btn btn-default">Min Apppears</button>
-                        <button id="getMax" class="btn btn-default">Max Appears</button> 
-                        </div>
-                            <ul id="filterList" class="nav nav-sidebar" style="display:none;" >
+                            <ul id="filterList" class="nav nav-sidebar" >
 
                             </ul>
                         </div>
