--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 
 
-<link rel="stylesheet" href="{% static "css/vis.css"%}" />
+<link rel="stylesheet" href={% static "css/vis.css"%}/>
 <!-- <link type="text/css" rel="stylesheet" href="css/vis.css" /> -->
 
 <body>
