Without %static defined:

--- a/comicPage.html
+++ b/comicPage.html
@@ -1,5 +1,3 @@
-{% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,8 +42,8 @@
     <div class="comics container">
         <h2>Common Appeared Comics</h2>
         <div class="comic character">
-            <img src={% static ""%} alt="character1"/>
-            <img src={% static ""%} alt="character2"/>
+            <img src="" alt="character1"/>
+            <img src="" alt="character2"/>
         </div>
         <br/>
 
@@ -90,8 +88,8 @@
     </div><!-- content container -->
 
 </div>
-<script src={% static "js/jquery-2.1.4.min.js"%}></script>
-<script src={% static "js/bootstrap.min.js"%}></script>
-<script src={% static "js/script.js"%}></script>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
