--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
         <button type="button" class="btn btn-default" id="mode-changer">Mode!</button>
         </div>
         <!-- END DELETE THIS FILLER WHEN INTEGRATE WITH FILTER COMPONENT -->
+        <div id="vis-loader-box"> 
+            <h4 id="loader-sayings">Loading...</h4>
+            <div class="progress">
+                <div id="vis-loader-bar" class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" style="width: 0%">
+                    <span class="sr-only">0% Complete</span>
+                </div>
+            </div>
+        </div>
         <svg>
             <g id="pieBox">
                 <g id="pieSliceBox"></g>
